Manifest files/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: nginx
        template:
          metadata:
            labels:
              app: nginx
        spec:
          containers:
            -name: cont1
            image: divyakatta1604/phpapp:appimage
            ports:
              -containerPort: 8080

            #configmap Integration  
            -configMapRef:
                name: bankapp-config

            #Resource Quota
            resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
                limits:
                  cpu: "200m"
                  memory: "256Mi"

            Liveness Probe:
              httpGet:
                 path: /
                 port: 80
              initialDelaySeconds: 30
              periodSeconds: 10

            ReadinessProbe:
             httpGet:
                path: /
                port: 80
             initialDelaySeconds: 10
             periodSeconds: 5
